--- a/src/Secure/Apartments_Table.form
+++ b/src/Secure/Apartments_Table.form
@@ -42,7 +42,7 @@
           <Properties>
             <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
               <Table columnCount="7" rowCount="0">
-                <Column editable="false" title="id" type="java.lang.Object"/>
+                <Column editable="false" title="id" type="java.lang.Integer"/>
                 <Column editable="false" title="Room No." type="java.lang.Object"/>
                 <Column editable="false" title="Description" type="java.lang.Object"/>
                 <Column editable="false" title="Status" type="java.lang.Object"/>
